[package]
name = "module-crowdfunding"
version = "1.0.1-dev"
authors = ['zero.io','gamedao.co']
repository = ''
edition = "2018"
license = "GPL-3.0-or-later"
description = "module-crowdfunding"

[package.metadata.substrate]
categories = ["module"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.119", optional = true }

frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

balances = { package = "pallet-balances", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
timestamp = { package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

primitives = { package = "zero-primitives", path = "../../primitives", default-features = false }
tangram = { package = "module-tangram", path = "../tangram", default-features = false }

[features]
default = ['std']
std = [
	'serde/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'balances/std',
	'timestamp/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std',
]
