[package]
name = 'module-tangram'
version = '1.0.0'

edition = '2018'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.119", optional = true }

frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

balances = { package = "pallet-balances", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
timestamp = { package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

primitives = { package = "zero-primitives", path = "../../primitives", default-features = false }
# control = { package = "module-control", path = "../control", default-features = false }
# crowdfunding = { package = "module-crowdfunding", path = "../crowdfunding", default-features = false }
# sense = { package = "module-sense", path = "../sense", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'balances/std',
    # 'sense/std'
]
